[package]
name = "reviewqueue"
version = "0.1.0"
edition = "2024"

[dependencies]
# async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# database
rust-query = { git = "https://github.com/LHolten/rust-query" }

# debugging
tracing = "0.1"
tracing-subscriber = "0.3"
color-eyre = "0.6.5"

# website
axum = { version = "0.8", features = ["macros", "ws"] }
tower-http = { version = "0.6", features = ["fs"] }
axum-extra = { version = "0.10", features = ["cookie"] }

maud = { version = "0.27", features = ["axum"] }
oauth2 = "5"

# scraping
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.23"
octocrab = "0.44"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
url = "2"

# other
dotenvy = "0.15"
jiff = { version = "0.2", features = ["serde"] }
time = "0.3"
